:art: Remove Content-Type when body is empty